discussion/kv_engine/156244/156244_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-29928: Reset PID when configuration changes

Update the PID so that it will recheck the configuration
against its internal state.

Whenever one of the terms changes, the PID resets.

Change-Id: I247f6d9d67fd6ef4c2484077a0fe1091dd22ac6e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-22 13:07:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-22 13:20:48.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10111/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.cc:24:22: error: out-of-line definition of "stepCore" does not match any declaration in "PIDController" [clang-diagnostic-error]
float PIDController::stepCore(
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.h:49:21: error: no template named "function" in namespace "std" [clang-diagnostic-error]
               std::function<void(PIDController&)> checkAndMaybeReset) {
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.h:101:25: error: no template named "function" in namespace "std" [clang-diagnostic-error]
                   std::function<void(PIDController&)> checkAndMaybeReset);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tools/pid_runner.cc:130:22: error: no matching member function for call to "step" [clang-diagnostic-error]
        auto c = pid.step<FauxClock>(pv, [](PIDController&) {});
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10111/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.cc:24:22:
error: out-of-line definition of "stepCore" does not match any declaration in "PIDController" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10111/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37160/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\pid_controller.h(49): error C2039: "function": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37160/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31715/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31715/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11831/ : FAILURE

Compile error at [2021-06-22T13:10:33.702Z] ../kv_engine/engines/ep/src/pid_controller.h:49:16:
error: ?std::function? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11831/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10762/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11680/ : FAILURE

Compile error at [2021-06-22T13:11:27.514Z] ../kv_engine/engines/ep/src/pid_controller.h:49:16:
error: ?std::function? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19714/ : FAILURE

Compile error at [2021-06-22T13:14:25.594Z] ../kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19714/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12133/ : FAILURE

Compile error at [2021-06-22T13:10:02.194Z] ../kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12133/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8707/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
